[package]
name = "chmlib-sys"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
links = "chmlib"
description = "Raw bindings to the CHMLib C library"
license = "LGPL"
repository = "https://github.com/Michael-F-Bryan/chmlib"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = { version = "1.0" }
